@@ -1,3 +1,12 @@
+2007-01-18  Sanjay Madhav  <sanjay12@gmail.com>
+
+        Reviewed by Darin.
+
+        Add JavaScriptCore define to help with tracing of when objects are marked.
+
+        * kjs/object.cpp:
+        (KJS::JSObject::mark):
+
 2007-01-18  Simon Hausmann  <hausmann@kde.org>
 
         Reviewed by Zack.
